copy frontend files from rails app

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,9 @@ doctype
 html
   head
     title Hashtag Battle
+    link(type='text/css' rel='stylesheet' media='all', href='/app.css')
+    script(src='/vendor.js')
+    script(src='/app.js')
   body
     .text-center
       h1 Hashtag Battle
